...
    <string name="capture_mode_hdr">HDR</string>
    <string name="capture_mode_night">Night</string>
    <string name="delete_button_alt">Delete</string>
    <string name="delete_dialog">Delete current photo?</string>
    <string name="delete_title">Confirm</string>
    <string name="start_scan_exam">Quick and dirty scan exam</string>
    <string name="resolve">Resolve</string>
    <string name="retake">Retake</string>
    <string name="approve">Approve</string>
    <string name="resolve_answers">Resolve Answers</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="answers_is_1">1</string>
...
    <string name="year_2013">2013</string>
    <string name="hint_calculus">Calculus</string>
    <string name="hint_username">bob123@gmail.com</string>
    <string name="create_exam_dialog_exam_is_beeing_uploaded">Exam is being uploaded</string>
    <string name="create_exam_dialog_ok">OK</string>
    <string name="home_would_you_like_to_resume">Would you like resume your last session?</string>
    <string name="home_dialog_yes">Yes</string>
    <string name="detect_corners_version_number_hint">version#</string>
    <string name="detect_corners_please_choose_version">Please choose version</string>
    <string name="detect_corners_ok">OK</string>
    <string name="detect_corners_the_empty_version_choice">Choose version</string>
    <string name="add_version_action">Add</string>
    <string name="menu_logout">Logout</string>
...
