...
            android:id="@+id/button_cd_retake"
            android:layout_width="107dp"
            android:layout_height="73dp"
            android:background="@drawable/scan_exam_button"
            android:text="@string/retake_scan"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button_cd_approve"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.509" />

        <Button
            android:id="@+id/button_cd_approve"
...
            app:layout_constraintStart_toEndOf="@+id/button_cd_retake"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.509" />


        <!--        <Button-->
        <!--            android:id="@+id/button_cd_nav_to_resolve_answers"-->
        <!--            android:layout_width="67dp"-->
        <!--            android:layout_height="62dp"-->
        <!--            android:layout_gravity="bottom"-->
        <!--            android:layout_marginEnd="8dp"-->
        <!--            android:background="@drawable/button_next_step"-->
        <!--            app:layout_constraintBottom_toBottomOf="@+id/button_cd_approve_and_scan_answers"-->
...
